--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.11.0",
     "cheerio": "^1.1.2",
     "express": "^5.1.0",
+    "moment": "^2.30.1",
     "puppeteer": "^24.17.1"
   },
   "devDependencies": {
