--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.1.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "puppeteer": "^24.17.1"
   },
